--- a/components/TextEditor/ContentInput/ContentInput.module.scss
+++ b/components/TextEditor/ContentInput/ContentInput.module.scss
@@ -89,6 +89,7 @@
   margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
+  overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 10px;
